# CADTest

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
python_tests/: coxdeboor_derivative_chainrule.py  patch_sphere_bezier.py  plt_sphere_rotation.py  test_nurbs.py  test_rational_bezier.py
src/: BezierUtil.cpp  BezierUtil.h  Body.cpp  Body.h  BodyDifference.cpp  BodyFactory.cpp  BodyFactory.h  BodyIntersection.cpp  BodyUnion.cpp  CMakeLists.txt  CubicBezierTriangles.cpp  CubicBezierTriangles.h  Face.cpp  Face.h  Geometry.cpp  Geometry.h  GeometryUtil.cpp  GeometryUtil.h  Image.h  ImageGenerator.cpp  ImageGenerator.h  ImageUtil.cpp  ImageUtil.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshTessellate.cpp  MeshTessellate.h  MeshUtil.cpp  MeshUtil.h  NurbsCurve.cpp  NurbsCurve.h  NurbsExtrude.cpp  NurbsExtrude.h  NurbsFactory.cpp  NurbsFactory.h  NurbsRevolve.cpp  NurbsRevolve.h  NurbsRuled.cpp  (+30 more)
tests/: CMakeLists.txt  surface_1.step  test_bodyfactory.cpp  test_fileformat.cpp  test_geometry.cpp  test_geometryutil.cpp  test_level_of_details.cpp  test_mandelbrot_mesh.cpp  test_measurements.cpp  test_mesh_geosphere.cpp  test_mesh_level_of_details.cpp  test_mesh_mandelbrot.cpp  test_meshfactory.cpp  test_meshoperations.cpp  test_nurbs_mandelbrot.cpp  test_nurbscurve.cpp  test_nurbsextrude.cpp  test_nurbsfactory.cpp  test_nurbsrevolve.cpp  test_nurbsruled.cpp  test_nurbssolid.cpp  test_nurbssurface.cpp  test_nurbsutil.cpp  test_quadbeziertriangle.cpp  test_renderer.cpp  test_revolve.step  test_simple_sphere.cpp  test_smoothmeshfactory.cpp  test_smoothtriangle.cpp  test_solid.cpp  test_sphere.step  test_sphere_bool.step  test_stepfile.cpp  test_torus.step  test_transform.cpp
